fix iOS height not fitting

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -2,6 +2,7 @@
 body {
   width: 100vw;
   height: 100vh;
+  height: -webkit-fill-available;
   margin: 0em;
   padding: 0em;
 }
